# JWinGlobalHotKey

./: .gitignore  README.md  build.gradle  settings.gradle
src/main/cpp/: CMakeLists.txt  WinGlobalHotkeyAPI.cpp
src/main/cpp/include/: WinGlobalHotkeyAPI.h
src/main/cpp/jni/: com_github_timmyovo_winglobalhotkey_WinGlobalHotkeyAPI.h
src/main/java/com/github/timmyovo/winglobalhotkey/: Test.java  WinGlobalHotkeyAPI.java
